# bet_app

./: README.md
bet_maker/: .env.example  README.md  docker-compose.yml  pyproject.toml
bet_maker/alembic/: env.py
bet_maker/alembic/versions/: 2022-09-22-19-52-53_8a0f6a6aa582_init.py  2022-09-22-19-56-22_86269d851f1f_.py  2022-09-22-20-21-19_198b6dbccde2_.py  2022-09-22-20-27-24_fc41aa7b4478_.py  2022-09-22-23-07-17_5bcf87ac5111_.py
bet_maker/src/: dependencies.py  httpx_client.py  settings.py
bet_maker/src/app/: app.py  base_schema.py  loguru_settings.py
bet_maker/src/core/: router.py  schema.py
bet_maker/src/db/: base.py
bet_maker/src/db/models/: __init__.py  betshistory.py
line_provider/: .env.example  README.md  docker-compose.yml  dockerfile  pyproject.toml
line_provider/src/: dependencies.py  settings.py
line_provider/src/app/: app.py  loguru_settings.py
line_provider/src/core/: data.py  router.py  schema.py  service.py
