[tool.poetry]
name = "bet_maker"
version = "0.1.0"
description = ""
authors = ["Danil <danil63rg@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.10.3"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
httpx = "^0.23.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
sqlalchemy2-stubs = "^0.0.2-alpha.27"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
exclude = "(alembic|tests)"
mypy_path = "src"

follow_imports = "silent"
ignore_missing_imports = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_optional = true
strict_equality = true


[tool.isort]
profile = "black"