[tool.poetry]
name = "line_provider"
version = "0.1.0"
description = ""
authors = ["Danil <danil63rg@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.10.3"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
